--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
+          <li><a href="http://firefistmedia.com">http://firefistmedia.com</a></li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
